--- a/Assets/GoogleService-Info.plist
+++ b/Assets/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAXFva-3WF0Ry1G_8ubDz41Y8Wrmffvkow</string>
+	<string>AIzaSyAgPA_woJOKUHEmqz9VEhGCDwXhYvwys_c</string>
 	<key>GCM_SENDER_ID</key>
-	<string>290167338406</string>
+	<string>857260375787</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.gamedev.digital.test</string>
+	<string>com.nionnadze.crowdcontrol</string>
 	<key>PROJECT_ID</key>
-	<string>unity-test-gamedev</string>
+	<string>crowd-control-stickman</string>
 	<key>STORAGE_BUCKET</key>
-	<string>unity-test-gamedev.appspot.com</string>
+	<string>crowd-control-stickman.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:290167338406:ios:5f8e1ef3b636ed47f64b67</string>
+	<string>1:857260375787:ios:bb3d199fdd0ebecc8a48ae</string>
 </dict>
 </plist>
